// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Editor reducer should handle EDITOR_CHANGE_DIFF_VIEW 1`] = `
Object {
  "diffViewType": "unified",
  "editorName": "editor",
  "errorText": "",
  "hosts": Object {},
  "isMasked": false,
  "isMaximized": false,
  "isRendering": false,
  "keyBinding": "Default",
  "mode": "Ruby",
  "readOnly": false,
  "renderedValue": "",
  "selectedView": "input",
  "showError": false,
  "theme": "Monokai",
  "value": "",
}
`;

exports[`Editor reducer should handle EDITOR_CHANGE_SETTING 1`] = `
Object {
  "diffViewType": "split",
  "editorName": "editor",
  "errorText": "",
  "hosts": Object {},
  "isMasked": false,
  "isMaximized": false,
  "isRendering": false,
  "keyBinding": "Default",
  "mode": "html",
  "readOnly": false,
  "renderedValue": "",
  "selectedView": "input",
  "showError": false,
  "theme": "Monokai",
  "value": "",
}
`;

exports[`Editor reducer should handle EDITOR_CHANGE_STATE 1`] = `
Object {
  "diffViewType": "split",
  "editorName": "editor",
  "errorText": "",
  "hosts": Object {},
  "isMasked": false,
  "isMaximized": false,
  "isRendering": false,
  "keyBinding": "Default",
  "mode": "Ruby",
  "readOnly": false,
  "renderedValue": "",
  "selectedView": "input",
  "showError": false,
  "theme": "Monokai",
  "value": "< newValue />",
}
`;

exports[`Editor reducer should handle EDITOR_CHANGE_TAB 1`] = `
Object {
  "diffViewType": "split",
  "editorName": "editor",
  "errorText": "",
  "hosts": Object {},
  "isMasked": false,
  "isMaximized": false,
  "isRendering": false,
  "keyBinding": "Default",
  "mode": "Ruby",
  "readOnly": false,
  "renderedValue": "",
  "selectedView": "diff",
  "showError": false,
  "theme": "Monokai",
  "value": "",
}
`;

exports[`Editor reducer should handle EDITOR_DISMISS_ERROR 1`] = `
Object {
  "diffViewType": "split",
  "editorName": "editor",
  "errorText": "",
  "hosts": Object {},
  "isMasked": false,
  "isMaximized": false,
  "isRendering": false,
  "keyBinding": "Default",
  "mode": "Ruby",
  "readOnly": false,
  "renderedValue": "",
  "selectedView": "input",
  "showError": false,
  "theme": "Monokai",
  "value": "",
}
`;

exports[`Editor reducer should handle EDITOR_EXEC_PREVIEW 1`] = `
Object {
  "diffViewType": "split",
  "editorName": "editor",
  "errorText": "",
  "hosts": Object {},
  "isMasked": false,
  "isMaximized": false,
  "isRendering": false,
  "keyBinding": "Default",
  "mode": "Ruby",
  "readOnly": false,
  "renderedValue": "</>",
  "selectedView": "input",
  "showError": false,
  "theme": "Monokai",
  "value": "",
}
`;

exports[`Editor reducer should handle EDITOR_IMPORT_FILE 1`] = `
Object {
  "diffViewType": "split",
  "editorName": "editor",
  "errorText": "",
  "hosts": Object {},
  "isMasked": false,
  "isMaximized": false,
  "isRendering": false,
  "keyBinding": "Default",
  "mode": "Ruby",
  "readOnly": false,
  "renderedValue": "",
  "selectedView": "input",
  "showError": false,
  "theme": "Monokai",
  "value": "</>",
}
`;

exports[`Editor reducer should handle EDITOR_INITIALIZE 1`] = `
Object {
  "diffViewType": "split",
  "editorName": "editor",
  "errorText": "",
  "hosts": Object {},
  "isMasked": false,
  "isMaximized": false,
  "isRendering": false,
  "keyBinding": "Default",
  "mode": "Ruby",
  "readOnly": false,
  "renderedValue": "",
  "selectedView": "input",
  "showError": false,
  "theme": "Monokai",
  "value": "newValue",
}
`;

exports[`Editor reducer should handle EDITOR_MODAL_TOGGLE 1`] = `
Object {
  "diffViewType": "split",
  "editorName": "editor",
  "errorText": "",
  "hosts": Object {},
  "isMasked": false,
  "isMaximized": true,
  "isRendering": false,
  "keyBinding": "Default",
  "mode": "Ruby",
  "readOnly": false,
  "renderedValue": "",
  "selectedView": "input",
  "showError": false,
  "theme": "Monokai",
  "value": "",
}
`;

exports[`Editor reducer should handle EDITOR_REVERT_CHANGES 1`] = `
Object {
  "diffViewType": "split",
  "editorName": "editor",
  "errorText": "",
  "hosts": Object {},
  "isMasked": false,
  "isMaximized": false,
  "isRendering": false,
  "keyBinding": "Default",
  "mode": "Ruby",
  "readOnly": false,
  "renderedValue": "",
  "selectedView": "input",
  "showError": false,
  "theme": "Monokai",
  "value": "</>",
}
`;

exports[`Editor reducer should handle EDITOR_SHOW_ERROR 1`] = `
Object {
  "diffViewType": "split",
  "editorName": "editor",
  "errorText": "error",
  "hosts": Object {},
  "isMasked": false,
  "isMaximized": false,
  "isRendering": false,
  "keyBinding": "Default",
  "mode": "Ruby",
  "readOnly": false,
  "renderedValue": "error",
  "selectedView": "input",
  "showError": true,
  "theme": "Monokai",
  "value": "",
}
`;

exports[`Editor reducer should handle EDITOR_TOGGLE_MASK 1`] = `
Object {
  "diffViewType": "split",
  "editorName": "editor",
  "errorText": "",
  "hosts": Object {},
  "isMasked": true,
  "isMaximized": false,
  "isRendering": false,
  "keyBinding": "Default",
  "mode": "Ruby",
  "readOnly": false,
  "renderedValue": "",
  "selectedView": "input",
  "showError": false,
  "theme": "Monokai",
  "value": "",
}
`;

exports[`Editor reducer should handle EDITOR_TOGGLE_RENDER_VIEW 1`] = `
Object {
  "diffViewType": "split",
  "editorName": "editor",
  "errorText": "",
  "hosts": Object {},
  "isMasked": false,
  "isMaximized": false,
  "isRendering": true,
  "keyBinding": "Default",
  "mode": "Ruby",
  "readOnly": false,
  "renderedValue": "",
  "selectedView": "input",
  "showError": false,
  "theme": "Monokai",
  "value": "",
}
`;

exports[`Editor reducer should return the initial state 1`] = `
Object {
  "diffViewType": "split",
  "editorName": "editor",
  "errorText": "",
  "hosts": Object {},
  "isMasked": false,
  "isMaximized": false,
  "isRendering": false,
  "keyBinding": "Default",
  "mode": "Ruby",
  "readOnly": false,
  "renderedValue": "",
  "selectedView": "input",
  "showError": false,
  "theme": "Monokai",
  "value": "",
}
`;
